--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.20.3",
     "dotenv": "^16.4.5",
     "firebase": "^10.13.2",
+    "firebase-tools": "^13.20.1",
     "moment": "^2.30.1",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
